--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,3 @@
-[metadata]
-name = ipydoodle
-version = 0.0.1
-
-[options]
-py_modules = ipydoodle
+[build-system]
+requires = ["setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
