--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,6 @@
-[build-system]
-requires = ["setuptools", "wheel"]
-build-backend = "setuptools.build_meta"
+[metadata]
+name = ipydoodle
+version = 0.0.1
+
+[options]
+py_modules = ipydoodle
